hphp/hack/test/typecheck/let/let_out_of_scope.php.exp
File "let_out_of_scope.php", line 7, characters 8-8:
Unbound name: x (a global constant) (Naming[2049])
